--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,8 @@ langchain>=0.0.267
 langchain-google-genai>=1.0.0
 langchain-community>=0.0.13
 langchain-huggingface>=0.0.1
+langchain-text-splitters>=0.0.1
+langchain-core>=0.1.0
 faiss-cpu>=1.7.4
 pandas>=2.0.0
 google-generativeai>=0.3.0
