--- a/requirements.txt
+++ b/requirements.txt
@@ -2,12 +2,16 @@ streamlit>=1.22.0
 langchain>=0.0.267
 langchain-google-genai>=1.0.0
 langchain-community>=0.0.13
+langchain-huggingface>=0.0.1
+langchain-text-splitters>=0.0.1
+langchain-core>=0.1.0
 faiss-cpu>=1.7.4
 pandas>=2.0.0
 google-generativeai>=0.3.0
 python-dotenv>=1.0.0
 pypdf>=3.8.1
 crewai>=0.28.5
+sentence-transformers>=2.2.0
 
 
 
